--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 skills/emotion-engine/__pycache__/emotion_tool.cpython-312.pyc
 skills/emotion-engine/config/__pycache__/emotional_constants.cpython-312.pyc
+skills/emotion-engine/config/__pycache__/emotional_constants.cpython-312.pyc
+skills/emotion-engine/__pycache__/emotion_tool.cpython-312.pyc
