--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ skills/emotion-engine/__pycache__/emotion_tool.cpython-312.pyc
 skills/emotion-engine/config/__pycache__/emotional_constants.cpython-312.pyc
 skills/emotion-engine/config/__pycache__/emotional_constants.cpython-312.pyc
 skills/emotion-engine/__pycache__/emotion_tool.cpython-312.pyc
+skills/emotion-engine/utils/__pycache__/sentiment_analyzer.cpython-312.pyc
+skills/emotion-engine/tools/__pycache__/emotion_ml_engine.cpython-312.pyc
+*.pyc
+__pycache__/
